# Herelink-QGC

./: CMakeLists.txt
.github/actions/qt-android/: action.yml
.github/workflows/: herelink-linux.yml
android/: AndroidManifest.xml  build.gradle
android/src/org/mavlink/qgroundcontrol/: QGCLogger.java
cmake/: CreateCPackArchive.cmake  CreateCPackBundle.cmake  CreateCPackCommon.cmake  CreateCPackDeb.cmake  CreateCPackNSIS.cmake  CreateCPackRPM.cmake
cmake/find-modules/: FindGStreamer.cmake
custom/: CMakeLists.txt  qgcimages.qrc  qgcresources.qrc  qgroundcontrol.qrc
custom-example/: CMakeLists.txt
custom/android/: AndroidManifest.xml  build.gradle  debug.keystore
custom/cmake/: CustomOverrides.cmake
custom/src/: HerelinkCorePlugin.cc  HerelinkCorePlugin.h  HerelinkOptions.cc  HerelinkOptions.h
src/API/: QGCCorePlugin.cc  QGCCorePlugin.h
src/Comms/: BluetoothLink.cc  BluetoothLink.h  LinkManager.cc  LinkManager.h  QGCSerialPortInfo.cc  QGCSerialPortInfo.h  TCPLink.cc  TCPLink.h  UDPLink.cc  UDPLink.h
src/FirmwarePlugin/: FirmwarePlugin.h
src/FirmwarePlugin/APM/: APMFirmwarePlugin.cc
src/FlightDisplay/: GuidedActionsController.qml
src/FlightMap/Widgets/: PhotoVideoControl.qml
src/GPS/: CMakeLists.txt
src/QmlControls/: QGroundControlQmlGlobal.cc
src/QtLocationPlugin/: CMakeLists.txt  ElevationMapProvider.cpp  ElevationMapProvider.h  QGCCachedTileSet.cpp  QGCMapEngine.cpp  QGCMapEngine.h  QGCMapUrlEngine.cpp  QGCMapUrlEngine.h  QGCTileCacheDB.cpp  QGCTileCacheDB.h  QGCTileCacheWorker.cpp  QGCTileCacheWorker.h
src/QtLocationPlugin/QMLControl/: QGCMapEngineManager.cc  QGCMapEngineManager.h
src/Settings/: AppSettings.cc  AppSettings.h  FlightMap.SettingsGroup.json  FlightMapSettings.cc  FlightMapSettings.h  Video.SettingsGroup.json  VideoSettings.cc  VideoSettings.h
src/Terrain/: CMakeLists.txt  TerrainQuery.cc  TerrainQuery.h  TerrainQueryAirMap.cc  TerrainQueryAirMap.h  TerrainQueryInterface.cc  TerrainQueryInterface.h  TerrainTile.cc  TerrainTile.h  TerrainTileManager.cc  TerrainTileManager.h
src/Vehicle/: Vehicle.cc  Vehicle.h
src/VideoManager/: VideoManager.cc  VideoManager.h
test/: UnitTestList.cc
test/Terrain/: TerrainQueryTest.cc  TerrainQueryTest.h
